Text area no longer wraps when text reaches border

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -51,6 +51,7 @@ body {
 /* Text and Tools */
 #textField {
   font-family: 'sans-serif';
+  white-space: nowrap;
 }
 
 #imageTools {
